--- a/reports/travel_policy_report.xml
+++ b/reports/travel_policy_report.xml
@@ -493,6 +493,7 @@
                                     </div>
                                 </div>
                             </div>
+                             <div style="page-break-after: always !important;"/>
                         </div>
                         <div class="page" style="unicode-bidi: bidi-override !important; direction: unset !important;" t-if="o.package == 'family'">
                              <div style="page-break-before: always !important;"/>
