--- a/reports/travel_policy_report.xml
+++ b/reports/travel_policy_report.xml
@@ -315,7 +315,13 @@
                                                     <!--                                                    </t>-->
                                                 </tr>
                                             </t>
+                                            <t t-foreach="o.get_special_benefits()" t-as="sben">
+                                                <tr>
+                                                    <td style="font-size: 12px !important;"><t t-esc="sben.cover" /></td>
+                                                    <td style="font-size: 12px !important;"><t t-esc="sben.limit" /></td>
 
+                                                </tr>
+                                            </t>
                                         </tbody>
                                     </table>
                                 </div>
@@ -327,7 +333,7 @@
                                 <!--                                                <tr>-->
                                 <!--                                                    <t t-if="o.package == 'individual'">-->
                                 <!--                                                            <td style="font-size: 12px !important;"><t t-esc="sben.cover" /></td>-->
-                                <!--                                                            <td style="font-size: 12px !important;"><t t-esc="sben.limit" /></td>-->
+                                <!--                                                            <td  style="font-size: 12px !important;"><t t-esc="sben.limit" /></td>-->
                                 <!--                                                    </t>-->
                                 <!--                                                    <t t-if="o.package == 'family'">-->
                                 <!--                                                        <td style="font-size: 9px !important;"><t t-esc="sben.cover" /></td>-->
