--- a/views/travel_policy.xml
+++ b/views/travel_policy.xml
@@ -64,9 +64,9 @@
                     <!--                    <button name="send_mail_template" string="send" type="object"-->
                     <!--                    class="oe_highlight"-->
                     <!--                    />-->
-                    <button name="get_financial_data" string="Get Price" type="object"
-                            class="oe_highlight"
-                            attrs="{'invisible': ['|',('state', '=', 'approved'),('state', '=', 'canceled')]}"/>
+                    <!--                    <button name="get_financial_data" string="Get Price" type="object"-->
+                    <!--                            class="oe_highlight"-->
+                    <!--                            attrs="{'invisible': ['|',('state', '=', 'approved'),('state', '=', 'canceled')]}"/>-->
                     <!--                     <button name="get_financial" string="TEST" type="object"-->
                     <!--                            class="oe_highlight"/>-->
                     <button name="print_report_xml" string="XML" type="object"
@@ -83,10 +83,10 @@
                     <h3>Policy Information</h3>
                     <group>
                         <group>
-                            <field name="insured" attrs="{'readonly': [('state', '=','approved')]}"/>
+                            <field name="insured"  required="1" attrs="{'readonly': [('state', '=','approved')]}"/>
                             <field name="address" attrs="{'readonly': [('state', '=','approved')]}"/>
                             <field name="phone" attrs="{'readonly': [('state', '=','approved')]}"/>
-                            <field name="national_id" attrs="{'readonly': [('state', '=','approved')]}"/>
+                            <field name="national_id"  required="1" attrs="{'readonly': [('state', '=','approved')]}"/>
                             <field name="passport_num" attrs="{'readonly': [('state', '=','approved')]}" required="1"/>
                         </group>
                         <group>
@@ -97,13 +97,13 @@
                         </group>
                         <group>
 
-                            <field name="coverage_from" attrs="{'readonly': [('state', '=','approved')]}"/>
-                            <field name="duration" attrs="{'readonly': [('state', '=','approved')]}" force_save="1"/>
+                            <field name="coverage_from"  required="1" attrs="{'readonly': [('state', '=','approved')]}"/>
+                            <field name="duration"  required="1" attrs="{'readonly': [('state', '=','approved')]}" force_save="1"/>
 
 
                             <field name="coverage_to" readonly="1" force_save="1"/>
                             <field name="days" invisible="1"/>
-                            <field name="geographical_coverage" attrs="{'readonly': [('state', '=','approved')]}"/>
+                            <field name="geographical_coverage" required="1" attrs="{'readonly': [('state', '=','approved')]}"/>
 
 
                         </group>
@@ -111,7 +111,7 @@
                             <field name="user_id" invisible="1"  force_save="1" />
                             <field name="travel_agency" readonly="1" force_save="1" />
                             <field name="travel_agency_branch" invisible="1"  force_save="1"/>
-                            <field name="DOB" attrs="{'readonly': [('state', '=','approved')]}"/>
+                            <field name="DOB"  required="1" attrs="{'readonly': [('state', '=','approved')]}"/>
                             <field name="age"/>
                             <field name="gender" attrs="{'readonly': [('state', '=','approved')]}"/>
                         </group>
@@ -186,6 +186,12 @@
             <p class="oe_view_nocontent_create">Your Travel Commission
             </p>
         </field>
+    </record>
+    <record model="ir.actions.act_window" id="travel_policy_action_agent">
+        <field name="name">Travel Policy</field>
+        <field name="res_model">policy.travel</field>
+        <field name="view_id" ref="form_policy_travel"/>
+        <field name="view_mode">form</field>
     </record>
 
     <record id="cancel_view" model="ir.ui.view">
@@ -380,8 +386,8 @@
         <field name="code">order</field>
         <field name="prefix">ORDER_</field>
         <field name="padding">6</field>
-<!--        <field name="number_next">1</field>-->
-<!--        <field name="number_increment">1</field>-->
+        <!--        <field name="number_next">1</field>-->
+        <!--        <field name="number_increment">1</field>-->
     </record>
     <record model="ir.ui.view" id="orders_tree_view">
         <field name="name">orders</field>
