--- a/reports/travel_policy_report.xml
+++ b/reports/travel_policy_report.xml
@@ -5,7 +5,7 @@
                 model="policy.travel"
                 report_type="qweb-pdf"
                 name="smart_travel_agency.policy"
-                 menu="False"
+                 menu="{'False':[('state','=','pending')]}"
         />
 
         <template id="policy">
